# backpack

./: CMakeLists.txt  license.txt  readme.txt
example/: bar.cpp  bar.h  baz.cpp  baz.h  foo.cpp  foo.h  fred.cpp  fred.h  main.cpp
lib/backpack/: serializable.h
lib/backpack/archive/: archivable.h  archive.h  bufferarchive.cpp  bufferarchive.h  jsonarchive.cpp  jsonarchive.h
